--- a/styles/style-deismo.css
+++ b/styles/style-deismo.css
@@ -85,7 +85,14 @@ hr {
     display: none;
 }
 #link {
-    margin:auto;
+    margin: auto;
+    background-color: Transparent;
+    border: none;
+    cursor:pointer;
+    overflow: hidden; 
+}
+#mensagem-final {
+    width: 100%;
 }
 
 .tooltip {
