--- a/styles/style-ateismo.css
+++ b/styles/style-ateismo.css
@@ -100,7 +100,14 @@ p {
     display: none;
 }
 #link {
-    margin:auto;
+    margin: auto;
+    background-color: Transparent;
+    border: none;
+    cursor:pointer;
+    overflow: hidden; 
+}
+#mensagem-final {
+    width: 100%;
 }
 
 .tooltip {
