--- a/styles/style-gnosticismo.css
+++ b/styles/style-gnosticismo.css
@@ -144,7 +144,14 @@ p {
     display: none;
 }
 #link {
-    margin:auto;
+    margin: auto;
+    background-color: Transparent;
+    border: none;
+    cursor:pointer;
+    overflow: hidden; 
+}
+#mensagem-final {
+    width: 100%;
 }
 
 .tooltip {
