--- a/styles/style-pagina2.css
+++ b/styles/style-pagina2.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 } 
 
 html {
@@ -14,7 +15,7 @@ body {
 }
 
 .pagina {
-    background-image: url("https://therealgoodlife.com/wp-content/uploads/2016/06/solid_kraft_paper-e1545844788572-500x334.jpeg");
+    background-image: url("../imagens/superficie-de-embalagem-de-cartao-liso-bege.jpg");
     background-color: rgb(160, 139, 114);
     background-size: cover;
     box-sizing: border-box;
@@ -43,30 +44,20 @@ h3 {
 }
 #quadro1 {
     display: flex;
-    width: 800px;
     position: relative;
     scroll-snap-align: start;
-    box-sizing: border-box;
 }
-#quadro2{
+#quadro2 {
     position: relative;
-    padding: 3% 5%;
+    padding: 2% 5% 0 5%;
     text-align: justify;
     text-justify: inter-word;
     scroll-snap-stop: always;
     scroll-snap-align: start;
 }
-#quadro3{
+#quadro3 {
     position: relative;
-    padding: 3% 5%;
-    text-align: justify;
-    text-justify: inter-word;
-    scroll-snap-stop: always;
-    scroll-snap-align: start;
-}
-#quadro4 {
-    position: relative;
-    padding: 3% 5%;
+    padding: 2% 5%;
     text-align: justify;
     text-justify: inter-word;
     scroll-snap-stop: always;
@@ -76,7 +67,14 @@ h3 {
     display: none;
 }
 #link {
-    margin:auto;
+    margin: auto;
+    background-color: Transparent;
+    border: none;
+    cursor:pointer;
+    overflow: hidden; 
+}
+#mensagem-final {
+    width: 100%;
 }
 
 .tooltip {
@@ -86,10 +84,10 @@ h3 {
     z-index: 2;
     visibility: hidden;
     position: absolute;
-    left: 300px;
-    bottom: 80px;
+    left: 426px;
+    bottom: 74px;
     padding: 0.5em;
-    width: 350px;
+    width: 330px;
     line-height: 18px;
     color: brown;
     box-shadow: 5px 10px brown;
@@ -104,10 +102,10 @@ h3 {
     z-index: 2;
     visibility: hidden;
     position: absolute;
-    left: 230px;
-    bottom: 110px;
+    left: 392px;
+    bottom: 88px;
     padding: 0.5em;
-    width: 350px;
+    width: 250px;
     line-height: 18px;
     color: brown;
     box-shadow: 5px 10px brown;
@@ -122,10 +120,10 @@ h3 {
     z-index: 2;
     visibility: hidden;
     position: absolute;
-    left: 260px;
-    bottom: 190px;
+    left: 436px;
+    bottom: 178px;
     padding: 0.5em;
-    width: 350px;
+    width: 320px;
     line-height: 18px;
     color: brown;
     box-shadow: 5px 10px brown;
@@ -140,10 +138,10 @@ h3 {
     z-index: 2;
     visibility: hidden;
     position: absolute;
-    left: 205px;
-    bottom: 100px;
+    left: 422px;
+    bottom: 70px;
     padding: 0.5em;
-    width: 350px;
+    width: 200px;
     line-height: 18px;
     color: brown;
     box-shadow: 5px 10px brown;
