--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .pagina {
-    background-image: url("https://therealgoodlife.com/wp-content/uploads/2016/06/solid_kraft_paper-e1545844788572-500x334.jpeg");
+    background-image: url("../imagens/superficie-de-embalagem-de-cartao-liso-bege.jpg");
     background-color: rgb(160, 139, 114);
     background-size: cover;
     box-sizing: border-box;
